# byos-service

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Justfile  README.md  docker-compose.yml  rustfmt.toml
.github/workflows/: lint.yml  test.yml
crates/byos/: Cargo.toml
crates/byos-common/: Cargo.toml
crates/byos-common/abis/: Escrow.json  Trampoline.json  TrampolineFactory.json
crates/byos-common/src/: contracts.rs  eip712.rs  lib.rs  trampoline.rs
crates/byos-common/testdata/: proposal-eip712.json
crates/byos-common/tests/: eip712_vectors.rs
crates/byos-watcher/: Cargo.toml
crates/byos-watcher/src/: escrow.rs  lib.rs  watcher.rs
crates/byos/migrations/: 0001_audit_events.sql
crates/byos/src/: lib.rs  main.rs  run.rs
crates/byos/src/domain/: audit.rs  mod.rs  proposal.rs  scoring.rs  validator.rs
crates/byos/src/infra/: audit.rs  mod.rs  validation.rs
crates/byos/src/infra/api/: dto.rs  error.rs  mod.rs  routes.rs  solve.rs
crates/byos/src/infra/blockchain/: balance_override.rs  escrow.rs  mod.rs  simulation.rs  validator.rs
crates/byos/src/tests/: mod.rs
crates/byos/src/tests/cases/: audit_db.rs  cancel_proposal.rs  create_proposal.rs  list_proposals.rs  mod.rs
crates/byos/src/tests/setup/: mod.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs
crates/proposal-dto/: Cargo.toml
crates/proposal-dto/src/: lib.rs
crates/subsolver/: Cargo.toml
crates/subsolver/config/: example.toml
crates/subsolver/src/: lib.rs  main.rs  run.rs
crates/subsolver/src/domain/: mod.rs  proposal.rs  routing.rs  signing.rs
crates/subsolver/src/infra/: blockchain.rs  byos.rs  cli.rs  config.rs  mod.rs  orderbook.rs
docs/: m1-plan.md  metrics-reasoning.md
docs/adr/: 0001-proposal-api.md  0002-solver-engine.md  0003-slash-attribution-flow.md  0004-cargo-workspace-and-tooling.md  0005-crate-anatomy-and-layering.md  0006-configuration-and-cli.md  0007-error-handling.md  0008-observability.md  0009-testing-strategy.md  0010-settlement-outcome-source.md  0011-owner-scoped-reads.md  0012-simulation.md  README.md
docs/agents/: triage-labels.md
docs/reference/: cow-solver-slashing-policy.md  solver-auctions.md  solver-cips.md
