[package]
name = "byos-common"
version = "0.1.0"
edition = "2024"
authors = ["bleu <dev@bleu.studio>"]
license = "GPL-3.0-or-later"
description = "Shared types, EIP-712 schema, Trampoline calldata encoding, and contract ABIs for the BYOS service"

[lints]
workspace = true

[dependencies]
alloy.workspace = true
cowprotocol-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
