[package]
name = "byos-watcher"
version = "0.1.0"
edition = "2024"
authors = ["bleu <dev@bleu.studio>"]
license = "LGPL-3.0-or-later"
description = "Chain watcher and escrow operator for the BYOS service"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
alloy.workspace = true
byos-common.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
