[package]
name = "byos"
version = "0.1.0"
edition = "2024"
authors = ["bleu <dev@bleu.studio>"]
license = "LGPL-3.0-or-later"
description = "BYOS service: public proposal API + CoW solver engine"

[lints]
workspace = true

[lib]
doctest = false

[[bin]]
name = "byos"
path = "src/main.rs"

[dependencies]
