[package]
name = "byos"
version = "0.1.0"
edition = "2024"
authors = ["bleu <dev@bleu.studio>"]
license = "LGPL-3.0-or-later"
description = "BYOS service: public proposal API + CoW solver engine"

[lints]
workspace = true

[lib]
doctest = false

[[bin]]
name = "byos"
path = "src/main.rs"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
axum.workspace = true
byos-common.workspace = true
chrono.workspace = true
clap.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
solvers-dto.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
