[package]
name = "proposal-dto"
version = "0.1.0"
edition = "2024"
authors = ["bleu <dev@bleu.studio>"]
license = "MIT OR Apache-2.0"
description = "Wire types for the BYOS proposal API, shared by server (byos) and clients (subsolver)"

[lints]
workspace = true

[dependencies]
alloy = { workspace = true, features = ["std", "serde"] }
serde = { workspace = true }
serde_with = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
