[package]
name = "subsolver"
version = "0.1.0"
edition = "2024"
authors = ["bleu <dev@bleu.studio>"]
license = "LGPL-3.0-or-later"
description = "Reference sub-solver: example client for the BYOS proposal API, also used in e2e tests"

[lints]
workspace = true

[lib]
doctest = false

[[bin]]
name = "subsolver"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true, features = ["std", "serde", "sol-types", "signer-local"] }
proposal-dto = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
