[package]
name = "subsolver"
version = "0.1.0"
edition = "2024"
authors = ["bleu <dev@bleu.studio>"]
license = "LGPL-3.0-or-later"
description = "Reference sub-solver: example client for the BYOS proposal API, also used in e2e tests"

[lints]
workspace = true

[lib]
doctest = false

[[bin]]
name = "subsolver"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
humantime-serde = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
alloy = { workspace = true, features = [
  "std",
  "serde",
  "sol-types",
  "signer-local",
  "providers",
  "rpc-types",
  "reqwest",
] }
proposal-dto = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
wiremock = { workspace = true }
